--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <a href=""><img src="https://raw.githubusercontent.com/ekaterinavl/contentmanage/801d56c1291c0512a8a84605076c717c7d8ec318/AnyConv.com__cat_bat.svg" class="logo"></a>
+    <a href=""><img src="static/AnyConv.com__cat_bat.svg" class="logo"></a>
     <a href=""><span class="name">BatCat</span></a>
     <ul class="RegisterBlock">
         <a href=""><li class="register">Register</li></a>
