--- a/static/styles.css
+++ b/static/styles.css
@@ -2,43 +2,55 @@ body {
     width: 100%;
     margin: 0;
 }
+.all{
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    margin: 0;
+}
 
 a {
     text-decoration: none;
 }
 
 header {
-    background-color: #ffa500;
+   background-color: #ffa500;
+}
+
+.content {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin:auto ;
 }
 
 .container {
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    webkit-justify-content: space-between;
+    width: 85%;
+    height: 25%;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     position: relative;
 }
 
 
 li {
-    display: inline-block;
+    display: flex;
     float: right;
-    padding: 7px;
+    padding: 3px;
     margin: 10px;
-    border: 3px solid #ffd994;
-    background-color: #ffd485;
+    border: 3px solid #000000;
     transition: all .4s ease;
 }
 
 li:hover {
-      box-shadow: 3px 3px #000;
+       box-shadow: 3px 3px #000;
 }
 
 .logo {
-    width: 70px;
+    width: 45px;
     margin: 0;
     padding: 10px;
 }
@@ -47,9 +59,7 @@ li:hover {
     color: #000;
     font-size: 34px;
     font-family: 'Bradley Hand', cursive;
-    font-weight: bold;
-    /*text-shadow: 1px 1px rgb(164, 220, 222);*/
-}
+    font-weight: bold;}
 
 .register {
     color: #000;
@@ -65,27 +75,32 @@ li:hover {
     font-weight: bold;
 }
 
-.RegisterBlock {
-    display: -webkit-flex;
+
+.LogOut {
+     color: #000;
+    font-size: 24px;
+    font-family: 'Bradley Hand', cursive ;
+    font-weight: bold;
+}
+
+.Register-Block {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    webkit-justify-content: flex-end;
-    align-items: flex-end;
 }
 
 #footer {
-    width: inherit;
     background-color: rgb(157, 97, 7);
-    margin: 0;
-    height: 100px;
+    margin-bottom: 0;
+    padding: 2%;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: center;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-text {
-    color: #ffffff;
+     color: #ffffff;
     font-size: 24px;
     font-family: 'Bradley Hand', cursive ;
     font-weight: bold;
@@ -99,10 +114,11 @@ li:hover {
     text-shadow: 2px 2px rgb(222, 216, 164);
 }
 #main_content {
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    background-color: rgba(246, 235, 169, .9);
+    background-color: #ffffff;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 .articles {
@@ -110,16 +126,30 @@ li:hover {
 }
 
 article {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     float: right;
-    padding: 3px;
-    margin: 10px;
+    padding: 5px;
+    margin: 2%;
     border: 3px solid #fff;
     font-size: 18px;
     font-family: 'Bradley Hand', cursive;
-    box-shadow: 3px 3px rgb(222, 216, 164);
+}
+
+.article-content {
+    height: 75%;
 }
 
 .h1-article {
     text-shadow: 2px 2px rgb(222, 216, 164);
+}
+
+.main {
+    background-color: #ffffff;
+}
+
+.hello {
+    font-size: 35px;
+    font-family: 'Bradley Hand', cursive;
+    text-shadow: 3px 3px rgb(222, 216, 164);
 }
