--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,24 @@
         {% block head %}
         <meta charset="UTF-8">
         <link rel="stylesheet" href="static/styles.css">
-        <title>{% block title %}{% endblock %} My Webpage</title>
+        <link rel="stylesheet" href="../static/login.css">
+        <title>{% block title %}{% endblock %} The BatCat's website</title>
         {% endblock %}
     </head>
     
     <body>
+        <div class="flash">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+            {% for message in messages %}
+                <li class="flash-message">{{ message }}</li>
+            {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
+        </div>
+        
     {% block page_content %}
     {% endblock %}
     </body>
